Ability to run unit tests on Java 8